// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`line break > svelte 1`] = `
"import { template as _template } from 'vue/vapor';
const t0 = _template("<!--\\n  hello world\\n-->")

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;

exports[`line break > vue 1`] = `
"import { template as _template } from 'vue/vapor';
const t0 = _template("<!--\\n  hello world\\n-->")

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;

exports[`simple comment > svelte 1`] = `
"import { template as _template } from 'vue/vapor';
const t0 = _template("<!-- hello world -->")

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;

exports[`simple comment > vue 1`] = `
"import { template as _template } from 'vue/vapor';
const t0 = _template("<!-- hello world -->")

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;
